fix section spacing and image overlay

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -20,27 +20,26 @@ body {
 }
 
 h1 {
-  margin-top: 160px;
-  margin-bottom: 80px;
+  margin: 80px 0 80px;
   font-size: 54px;
   font-weight: 600;
 }
 
 h2 {
+  margin-top: 100px;
   font-size: 36px;
   display: block;
-  margin-top: 100px;
 }
 
 h3 {
-  font-size: 24px;
   margin: 20px 0;
+  font-size: 24px;
   font-weight: normal;
 }
 
 h4 {
-  font-size: 16px;
   margin: 20px 0;
+  font-size: 16px;
 }
 
 p {
@@ -59,19 +58,21 @@ mark {
 }
 
 .section {
-  padding-top: 10px;
-  padding-bottom: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 #home-section {
   background-color:#E0DBF1;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 /* icon styling */
 
 i {
-  float: center;
   padding: 8px; 
+  float: center;
   font-size: 32px;
   color: #7f75a6;
 }
@@ -80,15 +81,14 @@ i:hover, i:active {
     color: #554C78;
 }
 
-
 /* buttons */  
 
 #home-icon {
-  width: 60px;
   position: relative;
-  top: 25px;
   display: inline-block;
   text-align: left;
+  width: 60px;
+  top: 25px;
 }
 
 a:link, a:visited {
@@ -103,20 +103,51 @@ a:hover, a:active,
   background-color: #C9C2E3;
 }
 
+/* navigation bar */
+
+.nav-bar {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  background-color: #554C78;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  overflow: hidden;
+  width: 100%;
+  height: 80px;
+  color: white;
+}
+
+:target{
+  padding-top: 80px; /* = to height of navbar */
+  margin-top: -80px;
+}
+
+.nav-bar li {
+  display: inline;
+}
+
+.nav-bar a {
+  display: inline-block;
+  color: white;
+  margin-top: -15px;
+}
+
 /* photos */
 
 .row {
   display: flex;
   flex-wrap: wrap;
-  padding: 20px 20px;
+  padding: 10px 10px;
 }
 
 .column {
   flex: 39%;
   max-width: 39%;
-  padding: 20px 20px;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 10px 10px;
+  margin: auto;
 }
 
 .column img {
@@ -126,7 +157,7 @@ a:hover, a:active,
   border-style: solid;
   border-width: 2px;
   border-color: #C9C2E3;
-  box-shadow: 25px 25px #C9C2E3;
+  box-shadow: 20px 20px #C9C2E3;
   vertical-align: middle;
   width: 100%;
 }
@@ -174,7 +205,7 @@ a:hover, a:active,
   background-color: WhiteSmoke;
   border-style: solid;
   border-color: #ececec;
-  box-shadow: 25px 25px #ececec;
+  box-shadow: 20px 20px #ececec;
   border-radius: 50px;
   margin: 60px 20px;
   padding: 20px;
@@ -190,38 +221,6 @@ a:hover, a:active,
   border-color: #ececec;
 }
 
-/* navigation bar */
-
-.nav-bar {
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  background-color: #554C78;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  overflow: hidden;
-  width: 100%;
-  height: 80px;
-  color: white;
-}
-
-:target{
-  padding-top: 80px; /* = to height of navbar */
-  margin-top: -80px;
-}
-
-.nav-bar li {
-  display: inline;
-}
-
-.nav-bar a {
-  display: inline-block;
-  color: white;
-  margin-top: -15px;
-}
-
 .endbar {
   display: inline-block;
   margin-top: 60px;
@@ -229,4 +228,8 @@ a:hover, a:active,
   background-color:#C9C2E3;
   width: 100%;
   padding: 1%;
+}
+
+.endbar p {
+  font-size: 16px;
 }
